Chat timestamp misalignment fix

--- a/concept-app/src/main/webapp/resources/css/dashboard.css
+++ b/concept-app/src/main/webapp/resources/css/dashboard.css
@@ -494,15 +494,14 @@ body{
 
 .nav-chat .nav-content .chat-list .chat-timestamp {
     color:red;
-    float:right;
+    //float:right;
     margin:10px;
     color:#ccc;
     margin:0;
     font-size:12px;
     position:relative;
-    bottom: -10px;
-    right: 10px;
-    padding: 20px 0;
+    bottom: -30px;
+    padding: 0;
 }
 
 .nav-chat .nav-content .chat-actions{
